--- a/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/Create.cshtml
@@ -6,6 +6,7 @@
 
 <h1 class="text-primary">Before setting up a new Drawing Register</h1>
 <h6 class="text-secondary">Should know...</h6>
+<span class="text-danger">@Html.TempData["CantCreate"]</span>
 
 <hr />
 
