--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -7,45 +7,33 @@
 <h2 class="text-center text-primary mt-5">What is Drawing Register?</h2>
 
 <div class="row mt-1">
-	<div class="col-lg-4 p-3">
+	<div class="col-lg-6 p-3">
 		<div class="cardHome card-1 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard1" aria-controls="offcanvasCard1">
-			<h3>A Drawing Register</h3>
+			<h3>Drawing Register</h3>
 			<p>Web based software to store, manage, change electronic drawing and documentation files</p>
 		</div>
 	</div>
-	<div class="col-lg-4 p-3">
+	<div class="col-lg-6 p-3">
 		<div class="cardHome card-2 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard2" aria-controls="offcanvasCard2">
-			<h3>Organise</h3>
-			<p>Group your drawings by Projects and Project States</p>
+			<h3>App Workflow</h3>
+			<p>Manage Files by Register, States, Projects, Drawings, Documents and Layouts</p>
 		</div>
-	</div>
-	<div class="col-lg-4 p-3">
-		<div class="cardHome card-3 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard3" aria-controls="offcanvasCard3">
-			<h3>Track Drawing Changes</h3>
-			<p>Built in revision control system allows you to keep track of what changed</p>
-		 </div>
 	</div>
 </div>
 
 <h3 class="text-center text-primary mt-5">ASP.NET core MVC learning curve</h3>
 
 <div id="marginForHomeIntroduction" class="row mt-1">
-	<div class="col-lg-4 p-3">
+	<div class="col-lg-6 p-3">
 		<div class="cardHome card-4 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard4" aria-controls="offcanvasCard4">
 			<h3>Application</h3>
 			<p>README and Source Code</p>
 		</div>
 	</div>
-	<div class="col-lg-4 p-3">
+	<div class="col-lg-6 p-3">
 		<div class="cardHome card-5 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard5" aria-controls="offcanvasCard5">
 			<h3>Database</h3>
 			<p>SQL Diagram</p>
-		</div>
-	</div>
-	<div class="col-lg-4 p-3">
-		<div class="cardHome card-6 h-100" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasCard6" aria-controls="offcanvasCard6">
-			<h3>Security</h3>
-			<p>Step By Step</p>
 		</div>
 	</div>
 </div>
@@ -66,21 +54,9 @@
 	</div>
 </div>
 
-<div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasCard2" aria-labelledby="offcanvasCard2Label">
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCard2" aria-labelledby="offcanvasCard2Label">
 	<div class="offcanvas-header">
 		<h5 class="offcanvas-title" id="offcanvasCard2Label">OffCanvas</h5>
-		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-	</div>
-	<div class="offcanvas-body">
-		<div>
-			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-		</div>
-	</div>
-</div>
-
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCard3" aria-labelledby="offcanvasCard3Label">
-	<div class="offcanvas-header">
-		<h5 class="offcanvas-title" id="offcanvasCard3Label">OffCanvas</h5>
 		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 	</div>
 	<div class="offcanvas-body">
@@ -118,18 +94,6 @@
 			frameborder="0" 
 			src="https://drawsql.app/teams/solo-project/diagrams/drawing-register-v2/embed">
 		</iframe>
-	</div>
-</div>
-
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasCard6" aria-labelledby="offcanvasCard6Label">
-	<div class="offcanvas-header">
-		<h5 class="offcanvas-title" id="offcanvasCard4Label">OffCanvas</h5>
-		<button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-	</div>
-	<div class="offcanvas-body">
-		<div>
-			Some text as placeholder. In real life you can have the elements you have chosen. Like, text, images, lists, etc.
-		</div>
 	</div>
 </div>
 
