--- a/DrawingRegisterWeb/Views/Home/Index.cshtml
+++ b/DrawingRegisterWeb/Views/Home/Index.cshtml
@@ -74,8 +74,8 @@
 			</div>
 		</div>
 		<div class="card mt-3">
-			<div class="card-body text-primary">
-				<h4 class="card-title">Responsive user interface</h4>
+			<div class="card-body">
+				<h4 class="card-title text-primary">Responsive user interface</h4>
 				<h6 class="card-subtitle mb-2 text-muted">Share files in various ways</h6>
 				<img class="img-thumbnail" src="~/Assets/Share-files-in-various-ways.svg"/>
 				<p class="card-text">&emsp;Access your Drawing Register from everywhere. Thanks to a reactive user interface, you can easily review your 
@@ -189,31 +189,5 @@
 
 
 @section Scripts{
-	<script>
-		const homeIntroduction = document.getElementById("HomeIntroduction");
-		const marginForImg = document.getElementById("marginForHomeIntroduction");
-
-		window.addEventListener("resize", changeImgSize);
-
-		changeImgSize();
-		showImg();
-
-		function changeImgSize(){
-			if(window.innerWidth > window.innerHeight){
-				homeIntroduction.style.width = "30vh";
-				marginForImg.style.marginBottom = "20vh";
-			}
-			else {
-				homeIntroduction.style.width = "30vw";
-				marginForImg.style.marginBottom = "20vw";
-			}
-		}
-		function showImg(){
-			homeIntroduction.style.display = "block";
-		}
-		
-		function sqlDiagram(){
-			window.location.href = "https://drawsql.app/teams/solo-project/diagrams/drawing-register-v2";
-		}
-	</script>
+	<script src="~/js/home.js"></script>
 }
