Restrict Upload file size to 10 MB Add File loading SweetAlert

--- a/DrawingRegisterWeb/Views/DrawingRegisters/RequestInvitation.cshtml
+++ b/DrawingRegisterWeb/Views/DrawingRegisters/RequestInvitation.cshtml
@@ -20,6 +20,7 @@
 				<span asp-validation-for="RecipientEmail" class="text-danger"></span>
 				<span class="text-danger">@Html.ValidationMessage("NoRegister")</span>
 				<span class="text-danger">@Html.ValidationMessage("NoUser")</span>
+				<span class="text-danger">@Html.ValidationMessage("SpectatorRegister")</span>
 			</div>
 			<div class="form-group">
 				<label asp-for="Role" class="control-label"></label>
