--- a/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
+++ b/DrawingRegisterWeb/Views/ProjectStates/Index.cshtml
@@ -118,7 +118,7 @@
 		update and delete functions.
 	</p>
 	<div class="text-end mt-3">
-		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-danger">Don't show this message again...</button>
+		<button onclick="turnOffStateAlert()" class="btn btn-sm btn-outline-secondary">Don't show this message again...</button>
 	</div>
 </div>
 
